--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "git subtree push --prefix build origin gh-pages"
+    "publish": "git subtree push --prefix build origin gh-pages",
+    "auto-publish": "npm run build && git add . && git commit -m 'auto-publish' && npm run publish"
   },
   "eslintConfig": {
     "extends": "react-app"
